header and main section outline created

--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>jamie portfolio site</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>jamie portfolio site</title>
+    <script
+      src="https://kit.fontawesome.com/b5744fa056.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <img src="images/logo.png" alt="logo" />
+        <!-- logo image -->
+      </div>
+      <button class="nav-toggle" aria-label="toggle navigation">
+        <span class="hamburger"></span>
+      </button>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#home" class="nav__link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#services" class="nav__link">Services</a>
+          </li>
+          <li class="nav__item">
+            <a href="#about" class="nav__link">About</a>
+          </li>
+          <li class="nav__item">
+            <a href="#work" class="nav__link">Work</a>
+          </li>
+          <li class="nav__item">
+            <a href="#contact" class="nav__link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="intro" id="home">
+      <h1 class="section__title section__title--intro">
+        Hi, I am <strong>Jamie</strong>
+      </h1>
+      <p class="section__subtitle section__subtitle--intro">
+        front-end developer
+      </p>
+      <img src="images/jamie.jpg" alt="a picture of Jamie" />
+    </section>
+
+    <section class="my-services" id="services">
+      <h2 class="section__title section__title--services">What I do</h2>
+      <div class="services">
+        <div class="service">
+          <h3></h3>
+          <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus consequuntur hic consectetur ratione rem tenetur laudantium quas, aut commodi earum repudiandae, eaque harum atque qui perspiciatis, assumenda tempore numquam facere? </p>
+        </div>
+
+        <div class="service">
+          <h3></h3>
+          <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur temporibus facere ex doloremque accusantium numquam aspernatur labore! Minima suscipit sapiente numquam aliquid accusamus in explicabo cupiditate quis, non commodi? Dignissimos. </p>
+        </div>
+
+        <div class="service">
+          <h3></h3>
+          <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, et ratione ex sunt unde exercitationem cupiditate minima labore iure fugiat dignissimos maiores accusantium voluptates animi perspiciatis? Molestias qui dolores iure? </p>
+        </div>
+      </div>
+      <a href="#work" class="btn">My work</a>
+    </section>
+  </body>
 </html>
