about me section created

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>jamie portfolio site</title>
     <script
       src="https://kit.fontawesome.com/b5744fa056.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -54,21 +53,68 @@
       <h2 class="section__title section__title--services">What I do</h2>
       <div class="services">
         <div class="service">
-          <h3></h3>
-          <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus consequuntur hic consectetur ratione rem tenetur laudantium quas, aut commodi earum repudiandae, eaque harum atque qui perspiciatis, assumenda tempore numquam facere? </p>
+          <h3>Design</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+            consequuntur hic consectetur ratione rem tenetur laudantium quas,
+            aut commodi earum repudiandae, eaque harum atque qui perspiciatis,
+            assumenda tempore numquam facere?
+          </p>
         </div>
 
         <div class="service">
-          <h3></h3>
-          <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur temporibus facere ex doloremque accusantium numquam aspernatur labore! Minima suscipit sapiente numquam aliquid accusamus in explicabo cupiditate quis, non commodi? Dignissimos. </p>
+          <h3>E Commerce</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Consequuntur temporibus facere ex doloremque accusantium numquam
+            aspernatur labore! Minima suscipit sapiente numquam aliquid
+            accusamus in explicabo cupiditate quis, non commodi? Dignissimos.
+          </p>
         </div>
 
         <div class="service">
-          <h3></h3>
-          <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, et ratione ex sunt unde exercitationem cupiditate minima labore iure fugiat dignissimos maiores accusantium voluptates animi perspiciatis? Molestias qui dolores iure? </p>
+          <h3>Databases</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, et
+            ratione ex sunt unde exercitationem cupiditate minima labore iure
+            fugiat dignissimos maiores accusantium voluptates animi
+            perspiciatis? Molestias qui dolores iure?
+          </p>
         </div>
       </div>
       <a href="#work" class="btn">My work</a>
+    </section>
+
+    <!--about me--> 
+    <section class="about-me">
+      <h2 class="section__title section__title--about"></h2>
+      <p class="section__subtitle section__subtitle--about"></p>
+      <div class="about-me__body">
+        <p></p>
+        <p></p>
+        <img class="" alt="" />
+      </div>
+    </section>
+
+    <!--my work-->
+    <section class="my-work">
+      <h2 class="section__title"></h2>
+      <p class="section__subtitle"></p>
+      <div class="portfolio">
+        <!--portfolio item-->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" />
+        <!--portfolio item-->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" />
+        <!--portfolio item-->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" />
+        <!--portfolio item-->
+        <a href="#" class="portfolio__item">
+          <img src="" alt="" />
+        </a>
+      </div>
     </section>
   </body>
 </html>
