custom css tags, images, fonts, all that shit added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <script
       src="https://kit.fontawesome.com/b5744fa056.js"
       crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jersey+20&family=Jersey+25&family=Yarndings+12&display=swap"
+      rel="stylesheet" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Jersey+10+Charted&display=swap"
+      rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -41,12 +50,15 @@
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        Hi, I am <strong>Jamie</strong>
+        Hi, I am <strong>Jamie Ingalls</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
         front-end developer
       </p>
-      <img src="images/jamie.jpg" alt="a picture of Jamie" />
+      <img
+        src="jamie-spd-bw.jpeg"
+        alt="a picture of Jamie"
+        class="intro__img" />
     </section>
 
     <section class="my-services" id="services">
@@ -85,7 +97,7 @@
       <a href="#work" class="btn">My work</a>
     </section>
 
-    <!--about me--> 
+    <!--about me-->
     <section class="about-me">
       <h2 class="section__title section__title--about"></h2>
       <p class="section__subtitle section__subtitle--about"></p>
@@ -103,18 +115,37 @@
       <div class="portfolio">
         <!--portfolio item-->
         <a href="#" class="portfolio__item">
-          <img src="" alt="" />
+          <img src="coffee-shop-menu.png" alt="" />
+        </a>
+
         <!--portfolio item-->
         <a href="#" class="portfolio__item">
           <img src="" alt="" />
-        <!--portfolio item-->
-        <a href="#" class="portfolio__item">
-          <img src="" alt="" />
+        </a>
+
         <!--portfolio item-->
         <a href="#" class="portfolio__item">
           <img src="" alt="" />
         </a>
       </div>
+
+      <footer>
+        <a href="#" class="footer__link">email@email.email</a>
+        <ul class="social-list">
+          <li class="social-list__item">
+            <a class="social-list__link" href="#"></a>a
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link" href="#"></a>b
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link" href="#"></a>c
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link" href="#"></a>d
+          </li>
+        </ul>
+      </footer>
     </section>
   </body>
 </html>
