lots of img optiopns added, services section almost finished

--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jersey+20&family=Jersey+25&family=Yarndings+12&display=swap"
-      rel="stylesheet" />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Jersey+10+Charted&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Jersey+10+Charted&family=Jersey+20&family=Kode+Mono:wght@400..700&family=Yarndings+12&display=swap"
       rel="stylesheet" />
   </head>
   <body>
@@ -50,14 +46,14 @@
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        Hi, I am <strong>Jamie Ingalls</strong>
+        Hi, I'm <strong>Jamie</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        front-end developer
+        Full-Stack Engineer
       </p>
       <img
-        src="jamie-spd-bw.jpeg"
-        alt="a picture of Jamie"
+        src="./img/jamie-spd-bw.jpeg"
+        alt="a picture of Jamie programming beats"
         class="intro__img" />
     </section>
 
@@ -75,7 +71,7 @@
         </div>
 
         <div class="service">
-          <h3>E Commerce</h3>
+          <h3>Music</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
             Consequuntur temporibus facere ex doloremque accusantium numquam
@@ -85,7 +81,7 @@
         </div>
 
         <div class="service">
-          <h3>Databases</h3>
+          <h3>Pizza</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, et
             ratione ex sunt unde exercitationem cupiditate minima labore iure
@@ -94,7 +90,7 @@
           </p>
         </div>
       </div>
-      <a href="#work" class="btn">My work</a>
+      <button class="btn" href="#work">My work</button>
     </section>
 
     <!--about me-->
