services section finished

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         Hi, I'm <strong>Jamie</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        Full-Stack Engineer
+        Developer/Musician
       </p>
       <img
         src="./img/jamie-spd-bw.jpeg"
@@ -61,7 +61,7 @@
       <h2 class="section__title section__title--services">What I do</h2>
       <div class="services">
         <div class="service">
-          <h3>Design</h3>
+          <h3>Web Design</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
             consequuntur hic consectetur ratione rem tenetur laudantium quas,
@@ -90,7 +90,7 @@
           </p>
         </div>
       </div>
-      <button class="btn" href="#work">My work</button>
+      <button class="button" href="#work">My work</button>
     </section>
 
     <!--about me-->
