--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/logo.png" alt="logo" />
+        <!-- <img src="images/logo.png" alt="logo" /> -->
+        <p> jamie/ingalls </p>
         <!-- logo image -->
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -46,7 +47,7 @@
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        Hi, I'm <strong>Jamie</strong>
+        Oh hi, <strong>I'm  Jamie</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
         Developer/Musician
@@ -60,8 +61,9 @@
     <section class="my-services" id="services">
       <h2 class="section__title section__title--services">What I do</h2>
       <div class="services">
+        
         <div class="service">
-          <h3>Web Design</h3>
+          <h3>Web apps</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
             consequuntur hic consectetur ratione rem tenetur laudantium quas,
@@ -71,7 +73,7 @@
         </div>
 
         <div class="service">
-          <h3>Music</h3>
+          <h3>audio programming</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
             Consequuntur temporibus facere ex doloremque accusantium numquam
@@ -81,7 +83,7 @@
         </div>
 
         <div class="service">
-          <h3>Pizza</h3>
+          <h3>drums</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, et
             ratione ex sunt unde exercitationem cupiditate minima labore iure
@@ -143,5 +145,6 @@
         </ul>
       </footer>
     </section>
+    <script src="/script.js"></script>
   </body>
 </html>
