work files added, update intro pic next time!

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         Developer/Musician
       </p>
       <img
-        src="./img/jamie-spd-bw.jpeg"
+        src="/img/jamie-spd-bw.jpeg"
         alt="a picture of Jamie programming beats"
         class="intro__img" />
     </section>
