--- a/pages/work.html
+++ b/pages/work.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>my work</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/work.css">
-</head>
-<body>
-
-  <header>
-    <div class="logo">
-      <p>jamie/ingalls</p>
-    </div>
-    <button class="nav-toggle" aria-label="toggle navigation">
-      <span class="hamburger"></span>
-    </button>
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a href="#home" class="nav__link">Home</a>
-        </li>
-        <li class="nav__item">
-          <a href="#services" class="nav__link">Services</a>
-        </li>
-        <li class="nav__item">
-          <a href="#about" class="nav__link">About</a>
-        </li>
-        <li class="nav__item">
-          <a href="#work" class="nav__link">Work</a>
-        </li>
-        <li class="nav__item">
-          <a href="#contact" class="nav__link">Contact</a>
-        </li>
-      </ul>
-    </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>my work</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/work.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Jersey+10+Charted&family=Jersey+20&family=Kode+Mono:wght@400..700&family=Yarndings+12&display=swap"
+      rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <a href="/index.html" class="logo__link">jamie/ingalls</a>
+      </div>
+      <button class="nav-toggle" aria-label="toggle navigation">
+        <span class="hamburger"></span>
+      </button>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#home" class="nav__link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#services" class="nav__link">Services</a>
+          </li>
+          <li class="nav__item">
+            <a href="#about" class="nav__link">About</a>
+          </li>
+          <li class="nav__item">
+            <a href="#work" class="nav__link">Work</a>
+          </li>
+          <li class="nav__item">
+            <a href="#contact" class="nav__link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        the <strong> journey</strong>
+        the journey <strong> so far...</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">
-        so/far 
-      </p>
+      <p class="section__subtitle section__subtitle--intro">selected/works</p>
       <img
         src="/img/laying-down.jpeg"
         alt="a picture of Jamie programming beats"
@@ -50,19 +53,87 @@
     </section>
 
     <section class="gallery" id="gallery">
-      <h2 class="section__title section__title--work">My Work</h2>
-      <p class="section__subtitle section__subtitle--work">a few mockups and a couple of links</p>
+      <h2 class="section__title section__title--work">projects</h2>
 
       <div class="portfolio">
-          <img src="/img/coffe-landing-page.jpg" alt="project 1" class="portfolio__img">
-          <img src="/img/project2.jpg" alt="project 2" class="portfolio__img">
-          <img src="/img/project3.jpg" alt="project 3" class="portfolio__img">
-          <img src="/img/project4.jpg" alt="project 4" class="portfolio__img">
-          <img src="/img/project5.jpg" alt="project 5" class="portfolio__img">
-          <img src="/img/project6.jpg" alt="project 6" class="portfolio__img">
+        <div class="portfolio__item brainbeat">
+          <h3 class="portfolio__subtitle">
+            <a
+              class="portfolio__item--link"
+              href="https://synapse-brainbeat-995495ee6c66.herokuapp.com/"
+              >synapse/brainbeat</a
+            >
+          </h3>
+          <p class="portfolio__caption">
+            capstone project for BrainStaion's SWE bootcamp. The
+            synapse/brainbeat is simple step sequencer synthesizer and drum
+            machine made with the Tone.js libray, React, SASS, and Node.js.
+          </p>
+          <img
+            src="/img/brainbeat-player.jpeg"
+            alt="brainbeat player page"
+            class="portfolio__img" />
+          <p class="portfolio__caption">
+            if you'd like learn more about this project, or
+            contribute to its ongoing development please visit the
+           
+              <a
+                class="portfolio__item--link github"
+                href="https://github.com/LandoMeowrissian/synapse-brainbeat"><svg class="github"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
+                
+              </a>
+          </p>
+          <img
+            src="/img/brainbeat-login.png"
+            alt="brainbeat login page"
+            class="portfolio__img" />
+          <p class="portfolio__caption"></p>
+        </div>
+
+        <div class="portfolio__item">
+          <h3 class="portfolio__subtitle">coffee shop menu mockup</h3>
+          <p class="portfolio__caption">
+            coffee shop menu design, loosely based on a project from
+            BrainStaion's SWE bootcamp.
+          </p>
+          <img
+            src="/img/coffee-shop-menu.png"
+            alt="project 1"
+            class="portfolio__img" />
+        </div>
+
+        <div class="portfolio__item">
+          <h3 class="portfolio__subtitle">coffee shop product page mockup</h3>
+          <p class="portfolio__caption">
+            the pink was a bit much but we're learning
+          </p>
+          <img
+            src="/img/coffee-landing.jpeg"
+            alt="project 1"
+            class="portfolio__img" />
+        </div>
+        <div class="portfolio__item">
+          <h3 class="portfolio__subtitle">outer worlds travelsite (wip)</h3>
+          <p class="portfolio__caption">
+            a parody travel agency site & tribute to the satire-rich game sci-fi
+            rpg, <span>"The Outer Worlds"</span>
+          </p>
+          <img
+            src="/img/outer-worlds-screen.jpeg"
+            alt="project 1"
+            class="portfolio__img" />
+          <h3 class="portfolio__subtitle">outer worlds travelsite slideshow</h3>
+          <video
+            src="/img/edgewater-slideshow.mov"
+            alt="project 1"
+            autoplay="true"
+            loop="true"
+            class="portfolio__img"></video>
+        </div>
       </div>
     </section>
-  <script src="/script.js"></script>
-  <script src=""/pages/work.js"></script>
-</body>
+
+    <script src="/script.js"></script>
+    <script src="/pages/work.js"></script>
+  </body>
 </html>
