services copy written

--- a/index.html
+++ b/index.html
@@ -63,36 +63,27 @@
       <div class="services">
         
         <div class="service">
-          <h3>Web apps</h3>
+          <h3>dev</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
-            consequuntur hic consectetur ratione rem tenetur laudantium quas,
-            aut commodi earum repudiandae, eaque harum atque qui perspiciatis,
-            assumenda tempore numquam facere?
+            A graduate of BrainStation's Software Development program, I am always looking for new opportunities to learn and grow as a developer. I have experience with HTML, CSS, JavaScript, React, Node.js, Express, and more.
           </p>
         </div>
 
         <div class="service">
-          <h3>audio programming</h3>
+          <h3>audio</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Consequuntur temporibus facere ex doloremque accusantium numquam
-            aspernatur labore! Minima suscipit sapiente numquam aliquid
-            accusamus in explicabo cupiditate quis, non commodi? Dignissimos.
+            Long before I was coding, I was making music. I have been playing drums for over 20 years and have over a decade of experience in live production. I am currently at work on the debut full-length album with my band, flossing. I have experience with Ableton Live, Logic Pro, MIDI prgramming and audio synthesis.
           </p>
         </div>
 
         <div class="service">
-          <h3>drums</h3>
+          <h3>pizza</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, et
-            ratione ex sunt unde exercitationem cupiditate minima labore iure
-            fugiat dignissimos maiores accusantium voluptates animi
-            perspiciatis? Molestias qui dolores iure?
+            I have been making pizza for over 10 years with wood-fired, gas, and electric ovens. I have a knack for dough making, and creating pies that are as aesthetically pleasing as they are delicious. my specialties are Neapolitan, and Detroit style pizza.
           </p>
         </div>
       </div>
-      <button class="button" href="#work">My work</button>
+      <button class="button"><a class="button-link" href="/pages/work.html"> My work</a></button>
     </section>
 
     <!--about me-->
