footer temporarily not displayed

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         </a>
       </div>
 
-      <footer>
-        <a href="#" class="footer__link">email@email.email</a>
+      <!-- <footer>
+        <a mailto="jamesmaclay@gmail.com" class="footer__link">email me</a>
         <ul class="social-list">
           <li class="social-list__item">
             <a class="social-list__link" href="#"></a>a
@@ -134,7 +134,7 @@
             <a class="social-list__link" href="#"></a>d
           </li>
         </ul>
-      </footer>
+      </footer> -->
     </section>
     <script src="/script.js"></script>
   </body>
