header button temporarily disabled

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <p> jamie/ingalls </p>
         <!-- logo image -->
       </div>
-      <button class="nav-toggle" aria-label="toggle navigation">
+      <!-- <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
-      </button>
+      </button> -->
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
