github svg added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="logo">
         <!-- <img src="images/logo.png" alt="logo" /> -->
-        <p> jamie/ingalls </p>
+        <p>jamie/ingalls</p>
         <!-- logo image -->
       </div>
       <!-- <button class="nav-toggle" aria-label="toggle navigation">
@@ -47,7 +47,7 @@
 
     <section class="intro" id="home">
       <h1 class="section__title section__title--intro">
-        Oh hi, <strong>I'm  Jamie</strong>
+        Oh hi, <strong>I'm Jamie</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
         Developer/Musician
@@ -61,29 +61,40 @@
     <section class="my-services" id="services">
       <h2 class="section__title section__title--services">What I do</h2>
       <div class="services">
-        
         <div class="service">
           <h3>dev</h3>
           <p>
-            A graduate of BrainStation's Software Development program, I am always looking for new opportunities to learn and grow as a developer. I have experience with HTML, CSS, JavaScript, React, Node.js, Express, and more.
+            A graduate of BrainStation's Software Development program, I am
+            always looking for new opportunities to learn and grow as a
+            developer. I have experience with HTML, CSS, JavaScript, React,
+            Node.js, Express, and more.
           </p>
         </div>
 
         <div class="service">
           <h3>audio</h3>
           <p>
-            Long before I was coding, I was making music. I have been playing drums for over 20 years and have over a decade of experience in live production. I am currently at work on the debut full-length album with my band, flossing. I have experience with Ableton Live, Logic Pro, MIDI prgramming and audio synthesis.
+            Long before I was coding, I was making music. I have been playing
+            drums for over 20 years and have over a decade of experience in live
+            production. I am currently at work on the debut full-length album
+            with my band, flossing. I have experience with Ableton Live, Logic
+            Pro, MIDI prgramming and audio synthesis.
           </p>
         </div>
 
         <div class="service">
           <h3>pizza</h3>
           <p>
-            I have been making pizza for over 10 years with wood-fired, gas, and electric ovens. I have a knack for dough making, and creating pies that are as aesthetically pleasing as they are delicious. my specialties are Neapolitan, and Detroit style pizza.
+            I have been making pizza for over 10 years with wood-fired, gas, and
+            electric ovens. I have a knack for dough making, and creating pies
+            that are as aesthetically pleasing as they are delicious. my
+            specialties are Neapolitan, and Detroit style pizza.
           </p>
         </div>
       </div>
-      <button class="button"><a class="button-link" href="/pages/work.html"> My work</a></button>
+      <button class="button">
+        <a class="button-link" href="/pages/work.html"> My work</a>
+      </button>
     </section>
 
     <!--about me-->
@@ -118,11 +129,11 @@
         </a>
       </div>
 
-      <!-- <footer>
-        <a mailto="jamesmaclay@gmail.com" class="footer__link">email me</a>
+      <footer>
+        <a href="mailto:jamesmaclay@gmail.com" class="footer__link">email me</a>
         <ul class="social-list">
           <li class="social-list__item">
-            <a class="social-list__link" href="#"></a>a
+            <a class="social-list__link" href="https://github.com/LandoMeowrissian/synapse-brainbeat" target="_blank" ><img class="github" src="/img/github.svg" /> </a>
           </li>
           <li class="social-list__item">
             <a class="social-list__link" href="#"></a>b
@@ -134,7 +145,7 @@
             <a class="social-list__link" href="#"></a>d
           </li>
         </ul>
-      </footer> -->
+      </footer>
     </section>
     <script src="/script.js"></script>
   </body>
