services  format change

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </a>
       </div>
 
-      <footer>
+      <!-- <footer>
         <a href="mailto:jamesmaclay@gmail.com" class="footer__link">email me</a>
         <ul class="social-list">
           <li class="social-list__item">
@@ -145,7 +145,7 @@
             <a class="social-list__link" href="#"></a>d
           </li>
         </ul>
-      </footer>
+      </footer> -->
     </section>
     <script src="/script.js"></script>
   </body>
