about me section started

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         Oh hi, <strong>I'm Jamie</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        Developer/Musician
+        Software/Developer
       </p>
       <img
         src="/img/jamie-spd-bw.jpeg"
@@ -99,12 +99,14 @@
 
     <!--about me-->
     <section class="about-me">
-      <h2 class="section__title section__title--about"></h2>
-      <p class="section__subtitle section__subtitle--about"></p>
+      <h2 class="section__title section__title--about">who i am</h2>
+      <p class="section__subtitle section__subtitle--about">front-end developer based in nyc</p>
+      <img src="/img/jamie-eating-pizza-bw.jpeg" class="about-me__img" alt="" />
+
       <div class="about-me__body">
-        <p></p>
-        <p></p>
-        <img class="" alt="" />
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, distinctio ratione. Provident, labore, dignissimos eius libero fugit ex laboriosam, sunt vel facere excepturi officia adipisci distinctio earum! Sunt, aspernatur soluta?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, distinctio ratione. Provident, labore, dignissimos eius libero fugit ex laboriosam, sunt vel facere excepturi officia adipisci distinctio earum! Sunt, aspernatur soluta?</p>
+        
       </div>
     </section>
 
