about me section edits

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
 
     <!--about me-->
-    <section class="about-me">
+    <!-- <section class="about-me">
       <h2 class="section__title section__title--about">who i am</h2>
       <p class="section__subtitle section__subtitle--about">front-end developer based in nyc</p>
       <img src="/img/jamie-eating-pizza-bw.jpeg" class="about-me__img" alt="" />
@@ -108,30 +108,30 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, distinctio ratione. Provident, labore, dignissimos eius libero fugit ex laboriosam, sunt vel facere excepturi officia adipisci distinctio earum! Sunt, aspernatur soluta?</p>
         
       </div>
-    </section>
+    </section> -->
 
     <!--my work-->
-    <section class="my-work">
+    <!-- <section class="my-work">
       <h2 class="section__title"></h2>
       <p class="section__subtitle"></p>
       <div class="portfolio">
         <!--portfolio item-->
-        <a href="#" class="portfolio__item">
+        <!-- <a href="#" class="portfolio__item">
           <img src="coffee-shop-menu.png" alt="" />
-        </a>
+        </a> -->
 
         <!--portfolio item-->
-        <a href="#" class="portfolio__item">
+        <!-- <a href="#" class="portfolio__item">
           <img src="" alt="" />
-        </a>
+        </a> -->
 
         <!--portfolio item-->
-        <a href="#" class="portfolio__item">
+        <!-- <a href="#" class="portfolio__item">
           <img src="" alt="" />
         </a>
-      </div>
+      </div>  -->
 
-      <!-- <footer>
+     <!-- <footer>
         <a href="mailto:jamesmaclay@gmail.com" class="footer__link">email me</a>
         <ul class="social-list">
           <li class="social-list__item">
@@ -148,7 +148,7 @@
           </li>
         </ul>
       </footer> -->
-    </section>
+    <!-- </section> -->
     <script src="/script.js"></script>
   </body>
-</html>
+</html> 
