--- a/pages/work.html
+++ b/pages/work.html
@@ -17,7 +17,7 @@
       <div class="logo">
         <a href="/index.html" class="logo__link">jamie/ingalls</a>
       </div>
-      <button class="nav-toggle" aria-label="toggle navigation">
+      <!-- <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
       </button>
       <nav class="nav">
@@ -38,7 +38,7 @@
             <a href="#contact" class="nav__link">Contact</a>
           </li>
         </ul>
-      </nav>
+      </nav> -->
     </header>
 
     <section class="intro" id="home">
