--- a/pages/work.html
+++ b/pages/work.html
@@ -103,6 +103,16 @@
         </div>
 
         <div class="portfolio__item">
+          <h3 class="portfolio__subtitle">cocktail app prototype/ wireframe</h3>
+          <p class="portfolio__caption">
+            landing page for a cocktail app, made with Figma
+          </p>
+          <img
+            src="/img/cocktails-prototype.png"
+            alt="project 1"
+            class="portfolio__img" />
+        </div>
+        <div class="portfolio__item">
           <h3 class="portfolio__subtitle">cocktail app prototype/ wirefrae</h3>
           <p class="portfolio__caption">
             landing page for a cocktail app, made with Figma
