formatting updates. higher max-width, imporved responiveness. :)

--- a/index.html
+++ b/index.html
@@ -62,15 +62,17 @@
       <h2 class="section__title section__title--services">What I do</h2>
       <div class="services">
         <div class="service">
-          <h3>dev</h3>
+          <h3>software egineering</h3>
           <p>
-            A graduate of BrainStation's Software Development program, I am
-            always looking for new opportunities to learn and grow as a
-            developer. I have experience with HTML, CSS, JavaScript, React,
-            Node.js, Express, and more.
+            A graduate of BrainStation's Software Development program, I have a strong foundation in OOP, Databases, APIs, experience working with a multidisciplinary team, and cross-collaboration using AGILE methodology. Creative to the core, I’ve enjoyed a long music career employing technology and strong analytical skills to learn quickly on my feet, and my experience in product development pushed me to ﬁgure out how to improve processes I proposed.
           </p>
         </div>
-
+        <div class="service">
+          <h3>ux/ui</h3>
+          <p>
+           With a solid foundation in research skills honed through my anthropology degree, I am deeply passionate about utilizing technology to enrich user experiences. Possessing a discerning eye for design and a fervent appreciation for innovation, I excel in crafting intuitive interfaces that mesmerize and engage users. Continuously pursuing fresh opportunities to broaden my skill set, I seamlessly integrate a fusion of creativity and technical proficiency into every project.
+          </p>
+        </div>
         <div class="service">
           <h3>audio</h3>
           <p>
@@ -79,16 +81,6 @@
             production. I am currently at work on the debut full-length album
             with my band, flossing. I have experience with Ableton Live, Logic
             Pro, MIDI prgramming and audio synthesis.
-          </p>
-        </div>
-
-        <div class="service">
-          <h3>pizza</h3>
-          <p>
-            I have been making pizza for over 10 years with wood-fired, gas, and
-            electric ovens. I have a knack for dough making, and creating pies
-            that are as aesthetically pleasing as they are delicious. my
-            specialties are Neapolitan, and Detroit style pizza.
           </p>
         </div>
       </div>
