changed styles from grid to flex on work page

--- a/pages/work.html
+++ b/pages/work.html
@@ -72,11 +72,11 @@
           <img
             src="/img/brainbeat-player.jpeg"
             alt="brainbeat player page"
-            class="portfolio__img" />
+            class="portfolio__img-brainbeat" />
           <img
             src="/img/brainbeat-login.png"
             alt="brainbeat login page"
-            class="portfolio__img" />
+            class="portfolio__img--brainbeat" />
           <p class="portfolio__caption">
             if you'd like learn more about this project, or contribute to its
             ongoing development please visit the
